# IoT_ESP32_SensorApp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  apptool.sh  sdkconfig  u-x.sh
components/Application/: CMakeLists.txt  System.cpp
components/MessageProtocol/: CMakeLists.txt  Crypto.cpp  HttpServer.h  MqttClient.cpp  MqttClient.h  MqttClientDelegate.h  component.mk  mongoose_ex.c
components/MessageProtocol/certs/: mqtt_crt.h  mqtt_key.h  mqtt_user.h  ski.h
components/MessageProtocol/certs/original/: ca.key  ca.srl
components/MessageProtocol/certs/original/2/: ca.crt  ca.srl
components/MessageProtocol/lib/mongoose_shenghua/: ssl_migrate.h
components/MessageProtocol/mongoose/: mongoose.c
components/Sensor/: CMakeLists.txt  component.mk
components/Sensor/CO2/: CO2Data.h  CO2Sensor.cpp  CO2Sensor.h
components/Sensor/Common/: HealthyStandard.cpp  HealthyStandard.h  History.cpp  History.h  PTFrameParser.h  SensorConfig.cpp  SensorConfig.h  SensorData.h
components/Sensor/HCHO/: HchoData.h
components/Sensor/Orientation/: OrientationSensor.cpp  OrientationSensor.h
components/Sensor/Orientation/MPU6050/: HAL_MPU6050.h  MPU6050.c  MPU6050.cpp  MPU6050.h  MPU6050Adapter.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
components/Sensor/PM/: PMData.h  PMSensor.cpp  PMSensor.h
components/Sensor/SensorDataPacker/: SensorDataPacker.cpp  SensorDataPacker.h
components/Sensor/TSL2561/: LuminosityData.h  TSL2561.cpp  TSL2561.h
components/Sensor/TempHumid/: SHT3xSensor.cpp  SHT3xSensor.h  TempHumidData.h
fix-esp-idf/: i2c.c  spi_master.c  (+2 more)
(+137 files in other folders)
